// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering: failed state shows title, error and retry button 1`] = `
<Modal
  animationType="slide"
  onRequestClose={[MockFunction]}
  visible={true}
>
  <View
    style={
      {
        "backgroundColor": "#fff",
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#e4dfd6",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "paddingBottom": 12,
          "paddingHorizontal": 16,
          "paddingTop": 56,
        }
      }
    >
      <View
        accessibilityLabel="Back"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "minWidth": 70,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#244f38",
              "fontSize": 15,
              "fontWeight": "600",
            }
          }
        >
          ← Back
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#171715",
            "flex": 1,
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Atomic Habits
      </Text>
      <View
        style={
          {
            "minWidth": 70,
          }
        }
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "gap": 12,
            "justifyContent": "center",
            "paddingHorizontal": 32,
          }
        }
      >
        <Text
          style={
            {
              "color": "#9c2f2f",
              "fontSize": 18,
              "fontWeight": "700",
            }
          }
        >
          Generation failed
        </Text>
        <Text
          style={
            {
              "color": "#b06060",
              "fontSize": 13,
              "textAlign": "center",
            }
          }
        >
          Network timeout
        </Text>
        <View
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#244f38",
              "borderRadius": 20,
              "marginTop": 4,
              "opacity": 1,
              "paddingHorizontal": 24,
              "paddingVertical": 10,
            }
          }
        >
          <Text
            style={
              {
                "color": "#fff",
                "fontSize": 14,
                "fontWeight": "600",
              }
            }
          >
            Retry
          </Text>
        </View>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`rendering: generating state shows spinner and label 1`] = `
<Modal
  animationType="slide"
  onRequestClose={[MockFunction]}
  visible={true}
>
  <View
    style={
      {
        "backgroundColor": "#fff",
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#e4dfd6",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "paddingBottom": 12,
          "paddingHorizontal": 16,
          "paddingTop": 56,
        }
      }
    >
      <View
        accessibilityLabel="Back"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "minWidth": 70,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#244f38",
              "fontSize": 15,
              "fontWeight": "600",
            }
          }
        >
          ← Back
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#171715",
            "flex": 1,
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Atomic Habits
      </Text>
      <View
        style={
          {
            "minWidth": 70,
          }
        }
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "gap": 12,
            "justifyContent": "center",
            "paddingHorizontal": 32,
          }
        }
      >
        <ActivityIndicator
          color="#244f38"
          size="large"
        />
        <Text
          style={
            {
              "color": "#78746d",
              "fontSize": 16,
              "fontWeight": "600",
              "marginTop": 8,
            }
          }
        >
          Generating mind map…
        </Text>
        <Text
          style={
            {
              "color": "#a8a298",
              "fontSize": 13,
              "textAlign": "center",
            }
          }
        >
          You can close this — it'll keep generating in the background.
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`rendering: insufficient_content state shows friendly message 1`] = `
<Modal
  animationType="slide"
  onRequestClose={[MockFunction]}
  visible={true}
>
  <View
    style={
      {
        "backgroundColor": "#fff",
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#e4dfd6",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "paddingBottom": 12,
          "paddingHorizontal": 16,
          "paddingTop": 56,
        }
      }
    >
      <View
        accessibilityLabel="Back"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "minWidth": 70,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#244f38",
              "fontSize": 15,
              "fontWeight": "600",
            }
          }
        >
          ← Back
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#171715",
            "flex": 1,
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Atomic Habits
      </Text>
      <View
        style={
          {
            "minWidth": 70,
          }
        }
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "gap": 12,
            "justifyContent": "center",
            "paddingHorizontal": 32,
          }
        }
      >
        <Text
          style={
            {
              "color": "#78746d",
              "fontSize": 16,
              "fontWeight": "600",
              "marginTop": 8,
            }
          }
        >
          Not enough content
        </Text>
        <Text
          style={
            {
              "color": "#a8a298",
              "fontSize": 13,
              "textAlign": "center",
            }
          }
        >
          This book doesn't have enough content to generate a mind map.
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;

exports[`rendering: ready state renders SVG with node labels 1`] = `
<Modal
  animationType="slide"
  onRequestClose={[MockFunction]}
  visible={true}
>
  <View
    style={
      {
        "backgroundColor": "#fff",
        "flex": 1,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "borderBottomColor": "#e4dfd6",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "paddingBottom": 12,
          "paddingHorizontal": 16,
          "paddingTop": 56,
        }
      }
    >
      <View
        accessibilityLabel="Back"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "minWidth": 70,
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#244f38",
              "fontSize": 15,
              "fontWeight": "600",
            }
          }
        >
          ← Back
        </Text>
      </View>
      <Text
        numberOfLines={1}
        style={
          {
            "color": "#171715",
            "flex": 1,
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Atomic Habits
      </Text>
      <View
        style={
          {
            "minWidth": 70,
          }
        }
      />
    </View>
    <View
      style={
        {
          "flex": 1,
        }
      }
    >
      <View
        onLayout={[Function]}
        onMoveShouldSetResponder={[Function]}
        onMoveShouldSetResponderCapture={[Function]}
        onResponderEnd={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderReject={[Function]}
        onResponderRelease={[Function]}
        onResponderStart={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        onStartShouldSetResponderCapture={[Function]}
        style={
          {
            "alignItems": "center",
            "flex": 1,
            "justifyContent": "center",
            "overflow": "hidden",
            "position": "relative",
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "alignItems": "center",
              "flex": 1,
              "height": 758,
              "justifyContent": "center",
              "transform": [
                {
                  "scale": 0.9839650145772595,
                },
                {
                  "translateX": 0,
                },
                {
                  "translateY": 0,
                },
              ],
              "width": 758,
            }
          }
        >
          <View
            style={
              {
                "height": 758,
                "width": 758,
              }
            }
          >
            <RNSVGSvgView
              bbHeight={758}
              bbWidth={758}
              focusable={false}
              height={758}
              pointerEvents="none"
              style={
                [
                  {
                    "backgroundColor": "transparent",
                    "borderWidth": 0,
                  },
                  {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  {
                    "flex": 0,
                    "height": 758,
                    "width": 758,
                  },
                ]
              }
              width={758}
            >
              <RNSVGGroup
                fill={
                  {
                    "payload": 4278190080,
                    "type": 0,
                  }
                }
              >
                <RNSVGDefs>
                  <RNSVGMarker
                    markerHeight={5}
                    markerUnits="strokeWidth"
                    markerWidth={7}
                    name="arr"
                    orient="auto"
                    refX={7}
                    refY={2.5}
                  >
                    <RNSVGPath
                      d="M0 0 7 2.5 0 5z"
                      fill={
                        {
                          "payload": 4291083701,
                          "type": 0,
                        }
                      }
                      propList={
                        [
                          "fill",
                        ]
                      }
                    />
                  </RNSVGMarker>
                </RNSVGDefs>
                <RNSVGPath
                  d="M 379 379 Q 379 280 379 201"
                  fill={null}
                  markerEnd="arr"
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4291083701,
                      "type": 0,
                    }
                  }
                  strokeWidth={1.8}
                />
                <RNSVGPath
                  d="M 379 379 Q 464.7365149746594 428.5 533.1525218736301 468"
                  fill={null}
                  markerEnd="arr"
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4291083701,
                      "type": 0,
                    }
                  }
                  strokeWidth={1.8}
                />
                <RNSVGPath
                  d="M 379 379 Q 293.2634850253406 428.5 224.84747812636994 468.00000000000006"
                  fill={null}
                  markerEnd="arr"
                  propList={
                    [
                      "fill",
                      "stroke",
                      "strokeWidth",
                    ]
                  }
                  stroke={
                    {
                      "payload": 4291083701,
                      "type": 0,
                    }
                  }
                  strokeWidth={1.8}
                />
              </RNSVGGroup>
            </RNSVGSvgView>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": true,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={8}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "backgroundColor": "#244f38",
                    "borderRadius": 14,
                    "justifyContent": "center",
                    "paddingHorizontal": 10,
                    "paddingVertical": 8,
                    "position": "absolute",
                  },
                  {
                    "left": 295,
                    "minHeight": 64,
                    "opacity": 1,
                    "top": 347,
                    "width": 168,
                  },
                ]
              }
              testID="mindmap-center-node"
            >
              <Text
                numberOfLines={2}
                style={
                  {
                    "color": "#fff",
                    "fontSize": 14,
                    "fontWeight": "700",
                    "textAlign": "center",
                  }
                }
              >
                Atomic Habits
              </Text>
              <Text
                numberOfLines={1}
                style={
                  {
                    "color": "rgba(255,255,255,0.75)",
                    "fontSize": 10,
                    "marginTop": 2,
                  }
                }
              >
                non-fiction
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={8}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "paddingHorizontal": 8,
                    "paddingVertical": 4,
                    "position": "absolute",
                  },
                  {
                    "backgroundColor": "#a8d8d0",
                    "borderRadius": 12,
                    "left": 317,
                    "minHeight": 50,
                    "opacity": 1,
                    "top": 176,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                    "width": 124,
                  },
                ]
              }
              testID="mindmap-node-n1"
            >
              <Text
                numberOfLines={2}
                style={
                  {
                    "color": "#1a5050",
                    "fontSize": 13,
                    "fontWeight": "600",
                    "textAlign": "center",
                  }
                }
              >
                Habit Loop
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={8}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "paddingHorizontal": 8,
                    "paddingVertical": 4,
                    "position": "absolute",
                  },
                  {
                    "backgroundColor": "#c8aaec",
                    "borderRadius": 12,
                    "left": 471.1525218736301,
                    "minHeight": 50,
                    "opacity": 1,
                    "top": 443,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                    "width": 124,
                  },
                ]
              }
              testID="mindmap-node-n2"
            >
              <Text
                numberOfLines={2}
                style={
                  {
                    "color": "#3d2b6e",
                    "fontSize": 13,
                    "fontWeight": "600",
                    "textAlign": "center",
                  }
                }
              >
                Identity Change
              </Text>
            </View>
            <View
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              hitSlop={8}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                    "paddingHorizontal": 8,
                    "paddingVertical": 4,
                    "position": "absolute",
                  },
                  {
                    "backgroundColor": "#a8d8d0",
                    "borderRadius": 12,
                    "left": 162.84747812636994,
                    "minHeight": 50,
                    "opacity": 1,
                    "top": 443.00000000000006,
                    "transform": [
                      {
                        "scale": 1,
                      },
                    ],
                    "width": 124,
                  },
                ]
              }
              testID="mindmap-node-n3"
            >
              <Text
                numberOfLines={2}
                style={
                  {
                    "color": "#1a5050",
                    "fontSize": 13,
                    "fontWeight": "600",
                    "textAlign": "center",
                  }
                }
              >
                Environment Design
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#fafaf8",
          "borderTopColor": "#e4dfd6",
          "borderTopWidth": 1,
          "flexDirection": "row",
          "gap": 14,
          "justifyContent": "center",
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 5,
          }
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 3,
                "height": 13,
                "width": 13,
              },
              {
                "backgroundColor": "#c8aaec",
              },
            ]
          }
        />
        <Text
          style={
            {
              "color": "#78746d",
              "fontSize": 11,
              "textTransform": "capitalize",
            }
          }
        >
          theme
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 5,
          }
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 3,
                "height": 13,
                "width": 13,
              },
              {
                "backgroundColor": "#a8d8d0",
              },
            ]
          }
        />
        <Text
          style={
            {
              "color": "#78746d",
              "fontSize": 11,
              "textTransform": "capitalize",
            }
          }
        >
          concept
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 5,
          }
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 3,
                "height": 13,
                "width": 13,
              },
              {
                "backgroundColor": "#f5c9a0",
              },
            ]
          }
        />
        <Text
          style={
            {
              "color": "#78746d",
              "fontSize": 11,
              "textTransform": "capitalize",
            }
          }
        >
          argument
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 5,
          }
        }
      >
        <View
          style={
            [
              {
                "borderRadius": 3,
                "height": 13,
                "width": 13,
              },
              {
                "backgroundColor": "#f2a8b0",
              },
            ]
          }
        />
        <Text
          style={
            {
              "color": "#78746d",
              "fontSize": 11,
              "textTransform": "capitalize",
            }
          }
        >
          character
        </Text>
      </View>
    </View>
  </View>
</Modal>
`;
